# hal1

./: .gitignore  .gitmodules  CMakeLists.txt
3rd/rpi/: rootfs-sync
auno/: CMakeLists.txt  arduino_diecimila_crosscompile.cmake  pb.cmake
auno/auno/: CMakeLists.txt  firmware.cpp
auno/firmware/: CMakeLists.txt  SignalPublisher.cpp  SignalPublisher.h  firmware.cpp  rf-settings.h
auno/lib/: CMakeLists.txt  RingBufferPublisher.h  ScobsStream.cpp  ScobsStream.h
auno/libarduinocore/: Arduino.h  Arduino_private.h  CMakeLists.txt  HardwareSerial.cpp  HardwareSerial.h  Print.cpp  Print.h  Rf24Stream.cpp  Rf24Stream.h  SPI.cpp  cpp.c  new.cpp  pins_arduino.h  sos.c  sos.h  wiring_analog.c  wiring_digital.c  wiring_pulse.c
auno/test/: CMakeLists.txt  MockStream.h  RingBufferPublisherTest.cpp  ScobsStreamTest.cpp  SignalPublisherTest.cpp
conf/: device-map.properties  messages.h  rf-comm.h
core/: pom.xml
core/src/main/java/name/kan/hal1/core/: Main.java
core/src/main/java/name/kan/hal1/core/arduino/: SignalProcessor.java
core/src/main/java/name/kan/hal1/core/device/: DeviceDao.java
core/src/main/java/name/kan/hal1/core/sensor/temperature/: LinearTemperatureConverter.java  TemperatureConverter.java  TemperatureProcessor.java
core/src/main/java/name/kan/io/: CobsInputStream.java  CobsOutputStream.java  CommunicationException.java  IoTimeoutException.java  PacketInputStream.java  ScobsInputStream.java  ScobsOutputStream.java  SerialInputStream.java
core/src/main/protobuf/: arduino.proto
core/src/test/java/name/kan/hal1/core/: PbTest.java
core/src/test/java/name/kan/hal1/core/arduino/: SignalProcessorTest.java
core/src/test/java/name/kan/hal1/core/sensor/temperature/: LinearTemperatureConverterTest.java
core/src/test/java/name/kan/io/: CobsInputStreamTest.java  CobsOutputStreamTest.java  CobsStreamsIntegrationTest.java  ScobsInputStreamTest.java  ScobsOutputStreamTest.java  ScobsStreamsIntegrationTest.java
interface/protobuf/: arduino.proto
rf24-comm-lib/: CMakeLists.txt  CommChannelTest.cpp  RingBufferPublisherTest.cpp  RingBufferSenderTest.cpp
rf24-comm-lib/include/: ByteBuffer.h  CommChannel.h  RingBuffer.h  RingBufferPublisher.h  RingBufferSubscriber.h
rpi/: CMakeLists.txt  HelloWorld.cpp  auno-gw.cpp  rpi.cmake
